--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="project">
                 <h3>Low Cost Bionic Robotic Prosthetic Arm (Handler-1)</h3>
                 <p>3D designed, printed, assembled electronics, and programmed a bionic prosthetic arm with a patent filed.</p>
-                <img src="images/dummy-image.jpg" alt="Project Image">
+                <img src="images/Handler_1.jpg" alt="Project Image">
             </div>
             <div class="project">
                 <h3>AI-based Technique for Feature and Movement Detection (NIO)</h3>
