--- a/index.html
+++ b/index.html
@@ -13,51 +13,76 @@
             <p>Robotics / Data Science Enthusiast</p>
         </div>
     </header>
+
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
             <p>
                 I am a Robotics, AI, and automation enthusiast currently pursuing a Master’s degree in Robotics at the University of Bristol. 
-                I have a background in Data Science and AI from my previous roles as a Graduate Engineer and Data Scientist at Reliance Jio.
+                My background in Data Science and AI includes roles at Reliance Jio, where I focused on device recognition and anomaly detection.
             </p>
         </div>
     </section>
-    <section id="projects">
+
+    <section id="experience">
         <div class="container">
-            <h2>Projects</h2>
-            <div class="project">
-                <h3>Low Cost Bionic Robotic Prosthetic Arm (Handler-1)</h3>
-                <p>3D designed, printed, assembled electronics, and programmed a bionic prosthetic arm with a patent filed.</p>
-                <img src="images/Handler_1.jpg" alt="Project Image">
+            <h2>Experience</h2>
+            <div class="experience">
+                <h3>Data Science Engineer, Reliance Jio</h3>
+                <p>Worked on data analytics, device recognition, and anomaly detection in complex IoT environments.</p>
             </div>
-            <div class="project">
-                <h3>AI-based Technique for Feature and Movement Detection (NIO)</h3>
-                <p>Modifying an open-source AI semantic segmentation model for eye tracking.</p>
-                <img src="images/dummy-image.jpg" alt="Project Image">
-            </div>
-            <div class="project">
-                <h3>GCS and MAVLink Communication for AUVs</h3>
-                <p>Decryption of MAVLink data for navigation of an AUV.</p>
-                <img src="images/dummy-image.jpg" alt="Project Image">
-            </div>
-            <div class="project">
-                <h3>Survey and Rescue Drone, Ur5 Robotic Arm Simulation</h3>
-                <p>Live simulation and navigation of a drone, Ur5 robotic arm using ROS, Python, and MQTT protocols.</p>
-                <img src="images/dummy-image.jpg" alt="Project Image">
+            <div class="experience">
+                <h3>Graduate Engineer, Reliance Jio</h3>
+                <p>Focused on the development of analytical tools for automation and enhanced machine learning workflows.</p>
             </div>
         </div>
     </section>
+
+    <section id="projects">
+        <div class="container">
+            <h2>Projects</h2>
+            <div class="project" tabindex="0">
+                <h3>Low Cost Bionic Robotic Prosthetic Arm (Handler-1)</h3>
+                <p>3D designed, printed, assembled electronics, and programmed a bionic prosthetic arm with a patent filed.</p>
+                <img src="images/Handler_1.jpg" alt="Handler-1 Project Image">
+            </div>
+            <div class="project" tabindex="0">
+                <h3>AI-based Technique for Feature and Movement Detection (NIO)</h3>
+                <p>Enhanced an open-source AI semantic segmentation model for eye tracking.</p>
+                <img src="images/dummy-image.jpg" alt="AI Project Image">
+            </div>
+            <div class="project" tabindex="0">
+                <h3>GCS and MAVLink Communication for AUVs</h3>
+                <p>Developed a system for decrypting MAVLink data for AUV navigation.</p>
+                <img src="images/dummy-image.jpg" alt="AUV Project Image">
+            </div>
+            <div class="project" tabindex="0">
+                <h3>Survey and Rescue Drone, UR5 Robotic Arm Simulation</h3>
+                <p>Implemented live drone and UR5 arm simulation using ROS, Python, and MQTT protocols.</p>
+                <img src="images/dummy-image.jpg" alt="Drone Project Image">
+            </div>
+        </div>
+    </section>
+
     <section id="contact">
         <div class="container">
             <h2>Contact</h2>
             <p>Email: <a href="mailto:pranavnaik59@gmail.com">pranavnaik59@gmail.com</a></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/pranav-naik-a49b081a7" target="_blank">linkedin.com/in/pranav-naik-a49b081a7</a></p>
+            <div class="linkedin-block">
+                <script type="IN/FollowCompany" data-id="1337" data-counter="top"></script>
+            </div>
         </div>
     </section>
+
     <footer>
         <div class="container">
             <p>&copy; 2024 Pranav Naik. All rights reserved.</p>
         </div>
     </footer>
+
+    <!-- LinkedIn API Script -->
+    <script type="text/javascript" src="https://platform.linkedin.com/in.js">
+        api_key: YOUR_API_KEY
+    </script>
 </body>
 </html>
