--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
         <div class="container">
             <h2>About Me</h2>
             <p>
-                I am a Robotics, AI, and automation enthusiast currently pursuing a Master’s degree in Robotics at the University of Bristol. 
-                My background in Data Science and AI includes roles at Reliance Jio, where I focused on device recognition and anomaly detection.
+                Hi ! Welcome to Pranav's page. I am a Enthusiastic and skilled AI and Robotics professional with extensive experience in data science, machine learning,
+                and neural networks. I have a proven track record in deploying machine learning and deep learning models on
+                various hardware platforms, including CPUs, GPUs, and edge devices .I am currently pursuing an MSc in Robotics
+                at the University of Bristol, with a strong foundation in Electronics from the National Institute of Technology Goa
+                and work experience in AI at Jio Platforms. I love to solve complex technical problems and deliver optimized
+                solutions.
             </p>
         </div>
     </section>
