added changes and images to projects

--- a/index.html
+++ b/index.html
@@ -80,17 +80,17 @@
                 <div class="project">
                     <h3>AI-based Eye Tracking Technique</h3>
                     <p>Modified AI semantic segmentation models for precise eye tracking.</p>
-                    <img src="images/dummy-image.jpg" alt="AI Project Image">
+                    <img src="images/eye_track.jpeg" alt="AI Project Image">
                 </div>
                 <div class="project">
-                    <h3>GCS and MAVLink Communication for AUVs</h3>
-                    <p>Decrypted MAVLink data for AUV navigation.</p>
-                    <img src="images/dummy-image.jpg" alt="AUV Project Image">
+                    <h3>UR5 Robotic Arm Simulation</h3>
+                    <p>UR5 arm simulation using ROS, Gazebo, Python, and MQTT protocols with package segragation using image processing and trajectory planning </p>
+                    <img src="images/Ur5_sim.jpeg" alt="AUV Project Image">
                 </div>
                 <div class="project">
-                    <h3>Survey and Rescue Drone, UR5 Robotic Arm Simulation</h3>
-                    <p>Implemented live drone and UR5 arm simulation using ROS, Python, and MQTT protocols.</p>
-                    <img src="images/dummy-image.jpg" alt="Drone Project Image">
+                    <h3>Survey and Rescue Drone</h3>
+                    <p>Implemented drone simulation and live experimantaion in stabilizaing drone and navigating waypoits detected through image processing of checkpoint marks.</p>
+                    <img src="images/Survey_drone.jpeg" alt="Drone Project Image">
                 </div>
             </div>
         </div>
