minor change in title

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="container">
             <h1>Pranav Naik</h1>
             <p>Robotics and Artificial Intelligence Enthusiast</p>
+            <p>University of Bristol</p>
         </div>
     </header>
 
