added background image with tint

--- a/index.html
+++ b/index.html
@@ -99,15 +99,13 @@
 
     <section id="contact">
         <div class="container">
-
-            <div class="linkedin-block">
-                <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="pranav-naik-a49b081a7" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://uk.linkedin.com/in/pranav-naik-a49b081a7?trk=profile-badge">Reach out to me on linked !</a></div>
-            </div>
             <h2>Contact</h2>
             <p>Email: <a href="mailto:pranavnaik59@gmail.com">pranavnaik59@gmail.com</a></p>
             <p>Phone: +44 7721950517 / +91 9552399948</p>
-            <p>Location: Temple Way, Bristol, United Kingdom</p>
-
+            <p>Location: Bristol, United Kingdom</p>
+            <div class="linkedin-block">
+                <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="pranav-naik-a49b081a7" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://uk.linkedin.com/in/pranav-naik-a49b081a7?trk=profile-badge"></a></div>
+            </div>
         </div>
     </section>
 
