changed about me

--- a/index.html
+++ b/index.html
@@ -27,16 +27,26 @@
     </nav>
 
     <section id="about">
-        <div class="container">
-            <h2>About Me</h2>
-            <p>
-                Hi ! Welcome to Pranav's page. I am a Enthusiastic and skilled AI and Robotics professional with extensive experience in data science, machine learning,
-                and neural networks. I have a proven track record in deploying machine learning and deep learning models on
-                various hardware platforms, including CPUs, GPUs, and edge devices .I am currently pursuing an MSc in Robotics
-                at the University of Bristol, with a strong foundation in Electronics from the National Institute of Technology Goa
-                and work experience in AI at Jio Platforms. I love to solve complex technical problems and deliver optimized
-                solutions.
-            </p>
+        <div class="container about-container">
+            <div class="profile-picture">
+                <img src="images/profile_picture.jpeg" alt="Profile Picture">
+            </div>
+            <div class="about-content">
+            <h2 class="centered-title">About Me</h2>
+                <p>
+                    Hi ! Welcome to Pranav's page. I am a Enthusiastic and skilled AI and Robotics professional with extensive experience in data science, machine learning,
+                    and neural networks. I have a proven track record in deploying machine learning and deep learning models on
+                    various hardware platforms, including CPUs, GPUs, and edge devices .I am currently pursuing an MSc in Robotics
+                    at the University of Bristol, with a strong foundation in Electronics from the National Institute of Technology Goa
+                    and work experience in AI at Jio Platforms. I love to solve complex technical problems and deliver optimized
+                    solutions.
+                </p>
+            </div>
+            <div class="linkedin-block">
+                <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="pranav-naik-a49b081a7" data-version="v1">
+                    <a class="badge-base__link LI-simple-link" href="https://uk.linkedin.com/in/pranav-naik-a49b081a7?trk=profile-badge"></a>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -103,9 +113,7 @@
             <p>Email: <a href="mailto:pranavnaik59@gmail.com">pranavnaik59@gmail.com</a></p>
             <p>Phone: +44 7721950517 / +91 9552399948</p>
             <p>Location: Bristol, United Kingdom</p>
-            <div class="linkedin-block">
-                <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="pranav-naik-a49b081a7" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://uk.linkedin.com/in/pranav-naik-a49b081a7?trk=profile-badge"></a></div>
-            </div>
+            
         </div>
     </section>
 
