linkedin badge change

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 </p>
             </div>
             <div class="linkedin-block">
-                <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="pranav-naik-a49b081a7" data-version="v1">
-                    <a class="badge-base__link LI-simple-link" href="https://uk.linkedin.com/in/pranav-naik-a49b081a7?trk=profile-badge"></a>
+                <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="pranav-naik-a49b081a7" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://uk.linkedin.com/in/pranav-naik-a49b081a7?trk=profile-badge"></a></div>
+              
                 </div>
             </div>
         </div>
